aggiunta logica di modifica in magazzino